--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,13 +1,96 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  background-color: #e5e8ea;
+  font-family: "Noto Sans", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+a,
+p,
+li {
+  color: #1f2937;
+  line-height: 1.3;
+}
+
+h1 {
+  font-size: 23px;
+}
+
+h2 {
+  font-size: 20.25px;
+}
+
+p,
+li {
+  font-size: 18px;
+}
+
+.body-2 {
+  font-size: 16px;
+  color: #757575;
+}
+
+nav {
+  background-color: #fdfdfd;
+  display: flex;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  align-items: center;
+}
+
+nav input[type="text"] {
+  padding: 10px;
+  border: none;
+  border-radius: 8px;
+  background-color: #e5e8ea;
+}
+
+nav ul {
+  list-style-type: none;
+  overflow: hidden;
+  font-size: 1.2rem;
+  float: right;
+  margin-right: 10%;
+}
+
+nav li {
+  display: inline;
+  padding: 1.5vw;
+}
+
+nav li a {
+  text-decoration: none;
+}
+
+nav li a:hover {
+  color: #8c8c8c;
+  transition: 0.3s ease-in-out;
+}
+
+.post:first-child {
+  margin-top: 150px;
+}
+
+.post {
+  background-color: #fdfdfd;
+  border: 1px solid #fdfdfd;
+  border-radius: 8px;
+  margin: 40px 25% auto 25%;
+}
+
+.post-text {
+  margin: 30px 40px 30px 40px;
+}
+
+.post-text .body-2 {
+  margin-top: -10px;
 }
