--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -5,7 +5,7 @@
 body,
 #root {
   margin: 0 auto;
-  background-color: #e5e8ea;
+  background-color: #f6faf8;
   font-family: "Noto Sans", sans-serif;
   width: 390px;
   height: 844px;
