--- a/my-app/src/pages/Login/Login.css
+++ b/my-app/src/pages/Login/Login.css
@@ -16,7 +16,9 @@
 }
 
 input {
+  border: none !important;
   border-radius: 8px;
   background: #eceeed;
-  padding-inline: 15px;
+  padding: 15px;
+  margin-top: 15px;
 }
