--- a/my-app/src/pages/HomeVTwo/HomeVTwo.css
+++ b/my-app/src/pages/HomeVTwo/HomeVTwo.css
@@ -5,3 +5,134 @@
   flex-direction: column;
   align-items: center;
 }
+
+.home-v-two-home-v-two {
+  align-items: center;
+  border: 1px none;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  min-width: 390px;
+  position: relative;
+}
+
+.home-v-two-content {
+  align-items: center;
+  background-color: #ece8d1;
+  display: flex;
+  flex-direction: column;
+  height: 2600px;
+  padding: 20px;
+  position: relative;
+  width: 390px;
+}
+
+.home-v-two-logo {
+  height: 24px;
+  left: 32px;
+  position: absolute;
+  top: 69px;
+  width: 31px;
+}
+
+.home-v-two-text-wrapper {
+  color: #000000;
+  font-family: "Oswald", Helvetica;
+  font-size: 23px;
+  font-weight: 400;
+  left: 308px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-decoration: underline;
+  top: 68px;
+  white-space: nowrap;
+}
+
+.home-v-two-b {
+  align-items: flex-end;
+  align-self: stretch;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 140px 0px 0px;
+  position: relative;
+}
+
+.home-v-two-hello-i-am-serenify {
+  align-self: stretch;
+  color: #000000;
+  font-family: "Oswald", Helvetica;
+  font-size: 100px;
+  font-weight: 500;
+  letter-spacing: 0;
+  line-height: 100px;
+  margin-top: -1px;
+  position: relative;
+}
+
+.home-v-two-p-wrapper {
+  align-items: flex-end;
+  align-self: stretch;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+}
+
+.home-v-two-your-online-anonymous-mental-health-prompt-based-forum {
+  align-self: stretch;
+  color: #000000;
+  font-family: "Oswald", Helvetica;
+  font-size: 100px;
+  font-weight: 400;
+  letter-spacing: 0;
+  line-height: 100px;
+  margin-top: -1px;
+  position: relative;
+}
+
+.home-v-two-span {
+  font-weight: 500;
+}
+
+.home-v-two-text-wrapper-2 {
+  font-size: 50px;
+  line-height: 50px;
+  text-decoration: line-through;
+}
+
+.home-v-two-p {
+  align-self: stretch;
+  color: #000000;
+  font-family: "Oswald", Helvetica;
+  font-size: 50px;
+  font-weight: 400;
+  letter-spacing: 0;
+  line-height: 50px;
+  margin-top: -1px;
+  position: relative;
+}
+
+.home-v-two-text-wrapper-3 {
+  line-height: 65px;
+}
+
+.home-v-two-text-wrapper-4 {
+  font-size: 100px;
+  font-weight: 500;
+  line-height: 100px;
+}
+
+.home-v-two-text-wrapper-6 {
+  color: #000000;
+  font-family: "Oswald", Helvetica;
+  font-size: 50px;
+  font-weight: 400;
+  letter-spacing: 0;
+  line-height: 50px;
+}
+
+.home-v-two-text-wrapper-7 {
+  font-weight: 700;
+}
