--- a/my-app/src/pages/HomeVTwo/HomeVTwo.css
+++ b/my-app/src/pages/HomeVTwo/HomeVTwo.css
@@ -1,22 +1,4 @@
-.container {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.home-v-two-home-v-two {
-  align-items: center;
-  border: 1px none;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  min-width: 390px;
-  position: relative;
-}
-
-.home-v-two-content {
+.content {
   align-items: center;
   background-color: #ece8d1;
   display: flex;
@@ -27,7 +9,7 @@
   width: 390px;
 }
 
-.home-v-two-logo {
+.logo {
   height: 24px;
   left: 32px;
   position: absolute;
@@ -35,7 +17,7 @@
   width: 31px;
 }
 
-.home-v-two-text-wrapper {
+.log-in {
   color: #000000;
   font-family: "Oswald", Helvetica;
   font-size: 23px;
@@ -49,90 +31,58 @@
   white-space: nowrap;
 }
 
-.home-v-two-b {
-  align-items: flex-end;
-  align-self: stretch;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 140px 0px 0px;
-  position: relative;
+.big {
+font-family: 'Oswald';
+font-style: normal;
+font-weight: 500;
+font-size: 100px;
+line-height: 100%;
+color: #000000;
 }
 
-.home-v-two-hello-i-am-serenify {
-  align-self: stretch;
-  color: #000000;
-  font-family: "Oswald", Helvetica;
-  font-size: 100px;
-  font-weight: 500;
-  letter-spacing: 0;
-  line-height: 100px;
-  margin-top: -1px;
-  position: relative;
-}
-
-.home-v-two-p-wrapper {
-  align-items: flex-end;
-  align-self: stretch;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  position: relative;
-}
-
-.home-v-two-your-online-anonymous-mental-health-prompt-based-forum {
-  align-self: stretch;
-  color: #000000;
-  font-family: "Oswald", Helvetica;
-  font-size: 100px;
+.small {
+  font-family: 'Oswald';
+  font-style: normal;
   font-weight: 400;
-  letter-spacing: 0;
-  line-height: 100px;
-  margin-top: -1px;
+  font-size: 50px;
+  line-height: 130%;
+  color: #000000;
+}
+
+.s1 {
+  padding: 140px 0px 0px;
+}
+
+.s2 {
+  display: flex;
+  flex-direction: column;
+  align-self: stretch;
+}
+
+.s3 {
+  display: flex;
+  flex-direction: column;
+  align-self: stretch;
+  justify-content: center;
   position: relative;
 }
 
-.home-v-two-span {
-  font-weight: 500;
-}
-
-.home-v-two-text-wrapper-2 {
-  font-size: 50px;
-  line-height: 50px;
+.smallcross {
   text-decoration: line-through;
 }
 
-.home-v-two-p {
-  align-self: stretch;
-  color: #000000;
-  font-family: "Oswald", Helvetica;
-  font-size: 50px;
-  font-weight: 400;
-  letter-spacing: 0;
-  line-height: 50px;
-  margin-top: -1px;
-  position: relative;
+.wheel {
+  height: 75px;
+  left: 205px;
+  position: absolute;
+  top: 250px;
+  width: 75px;
 }
 
-.home-v-two-text-wrapper-3 {
-  line-height: 65px;
-}
-
-.home-v-two-text-wrapper-4 {
-  font-size: 100px;
-  font-weight: 500;
-  line-height: 100px;
-}
-
-.home-v-two-text-wrapper-6 {
-  color: #000000;
-  font-family: "Oswald", Helvetica;
-  font-size: 50px;
-  font-weight: 400;
-  letter-spacing: 0;
-  line-height: 50px;
-}
-
-.home-v-two-text-wrapper-7 {
-  font-weight: 700;
+.cat {
+  height: 200px;
+  left: 20px;
+  position: absolute;
+  top: 240px;
+  width: 198px;
 }
