--- a/my-app/src/pages/Prompt/Prompt.css
+++ b/my-app/src/pages/Prompt/Prompt.css
@@ -1,32 +1,43 @@
 .container {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.sample {
-  justify-content: center;
-}
-
-.post {
-  background-color: #f9f9f9;
-  border-radius: 8px;
-  width: 90%;
-  gap: 15px;
+  max-width: 1000px;
   margin: auto;
+  padding: 0 20px;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.post h2 {
-  margin: 15px;
+h1 {
+  text-align: center;
+  font-size: 48px;
+  margin: 0;
+  padding: 30px 0;
 }
 
-.post h3 {
-  margin: -7px 15px 15px 15px;
+h2 {
+  text-align: center;
+  font-size: 36px;
+  margin-top: 50px;
 }
 
-.expand {
-  display: block;
-  margin: auto 15px 10px auto;
+/* .calendar button {
+  background-color: #508f56;
+  color: #fff;
+  padding: 10px 20px;
+  font-size: 18px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+button:hover {
+  background-color: #20371b;
+  color: #508f56;
+  border: 1px solid #508f56;
+} */
+
+p {
+  text-align: center;
+  font-size: 24px;
+  margin-top: 30px;
 }
