--- a/my-app/src/pages/Report/Report.css
+++ b/my-app/src/pages/Report/Report.css
@@ -1,7 +1,134 @@
-.container {
-  height: 100%;
-  width: 100%;
+.report-report {
+  align-items: center;
+  border: 1px none;
   display: flex;
   flex-direction: column;
+  min-width: 390px;
+  position: relative;
+}
+
+.report-content {
   align-items: center;
+  align-self: stretch;
+  background-color: #ece8d1;
+  display: flex;
+  flex-direction: column;
+  gap: 43px;
+  height: 950px;
+  padding: 20px 24px;
+  position: relative;
+}
+
+.report-b {
+  align-items: center;
+  align-self: stretch;
+  display: flex;
+  flex-direction: column;
+  padding: 50px 0px 0px;
+  position: relative;
+}
+
+.report-frame {
+  align-items: flex-start;
+  align-self: stretch;
+  display: flex;
+  height: 120px;
+  justify-content: flex-end;
+  position: relative;
+}
+
+.report-group {
+  cursor: pointer;
+  height: 66px;
+  min-width: 66px;
+  position: relative;
+  transform: rotate(-45deg);
+}
+
+.report-overlap-group {
+  height: 66px;
+  position: relative;
+  width: 66px;
+}
+
+.report-rectangle {
+  background-color: #282828;
+  height: 8px;
+  left: 0;
+  position: absolute;
+  top: 29px;
+  width: 66px;
+}
+
+.report-rectangle-552 {
+  background-color: #282828;
+  height: 8px;
+  left: 0;
+  position: absolute;
+  top: 29px;
+  transform: rotate(-90deg);
+  width: 66px;
+}
+
+.report-text-wrapper {
+  align-self: stretch;
+  color: #282828;
+  font-family: "Oswald", Helvetica;
+  font-size: 90px;
+  font-weight: 500;
+  letter-spacing: 0;
+  line-height: 90px;
+  position: relative;
+  white-space: nowrap;
+}
+
+.report-b-2 {
+  align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  gap: 36px;
+  margin-left: -4px;
+  margin-right: -4px;
+  padding: 40px 0px 0px;
+  position: relative;
+  width: fit-content;
+}
+
+.report-false-information {
+  color: #282828;
+  font-family: "Oswald", Helvetica;
+  font-size: 45px;
+  font-weight: 400;
+  letter-spacing: 0;
+  line-height: 58.5px;
+  margin-top: -1px;
+  position: relative;
+  white-space: nowrap;
+  width: 350px;
+}
+
+.report-div {
+  color: #686868;
+  font-family: "Oswald", Helvetica;
+  font-size: 45px;
+  font-weight: 400;
+  letter-spacing: 0;
+  line-height: 58.5px;
+  position: relative;
+  white-space: nowrap;
+  width: 350px;
+}
+
+.report-text-wrapper-2 {
+  color: #282828;
+  cursor: pointer;
+  font-family: "Oswald", Helvetica;
+  font-size: 90px;
+  font-weight: 500;
+  letter-spacing: 0;
+  line-height: 90px;
+  position: relative;
+  text-align: right;
+  white-space: nowrap;
+  width: 350px;
 }
