--- a/my-app/src/pages/Report/Report.css
+++ b/my-app/src/pages/Report/Report.css
@@ -94,7 +94,7 @@
   width: fit-content;
 }
 
-.report-false-information {
+.report-div-bold {
   color: #282828;
   font-family: "Oswald", Helvetica;
   font-size: 45px;
