--- a/my-app/src/pages/Report/Report.css
+++ b/my-app/src/pages/Report/Report.css
@@ -119,6 +119,20 @@
   width: 350px;
 }
 
+.report-text-wrapper {
+  align-self: stretch;
+  color: #282828;
+  cursor: pointer;
+  font-family: "Oswald", Helvetica;
+  font-size: 90px;
+  font-weight: 500;
+  letter-spacing: 0;
+  line-height: 90px;
+  margin-top: -1px;
+  position: relative;
+  width: 342px;
+}
+
 .report-text-wrapper-2 {
   color: #282828;
   cursor: pointer;
