--- a/my-app/src/pages/Prompt/Prompt.css
+++ b/my-app/src/pages/Prompt/Prompt.css
@@ -41,3 +41,203 @@ p {
   font-size: 24px;
   margin-top: 30px;
 } */
+
+.prompt-page-prompt-page {
+  align-items: center;
+  border: 1px none;
+  display: flex;
+  flex-direction: column;
+  min-width: 390px;
+  position: relative;
+}
+
+.prompt-page-content {
+  align-items: center;
+  align-self: stretch;
+  background-color: #ece8d1;
+  display: flex;
+  flex-direction: column;
+  padding: 20px 24px;
+  position: relative;
+}
+
+.prompt-page-logo {
+  height: 24px;
+  left: 32px;
+  position: absolute;
+  top: 69px;
+  width: 31px;
+}
+
+.prompt-page-you {
+  color: #282828;
+  cursor: pointer;
+  font-family: "Oswald", Helvetica;
+  font-size: 23px;
+  font-weight: 400;
+  left: 325px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-decoration: underline;
+  top: 69px;
+  white-space: nowrap;
+}
+
+.prompt-page-b {
+  align-items: center;
+  align-self: stretch;
+  display: flex;
+  flex-direction: column;
+  padding: 140px 0px 0px;
+  position: relative;
+}
+
+.prompt-page-apr {
+  align-self: stretch;
+  color: #282828;
+  font-family: "Oswald", Helvetica;
+  font-size: 45px;
+  font-weight: 400;
+  letter-spacing: 0;
+  line-height: 58.5px;
+  margin-top: -1px;
+  position: relative;
+  text-align: center;
+  white-space: nowrap;
+}
+
+.prompt-page-div {
+  align-items: center;
+  align-self: stretch;
+  display: flex;
+  flex-direction: column;
+  padding: 40px 0px 30px;
+  position: relative;
+}
+
+.prompt-page-sleep-how-much-did-you-get-last-night-what-is-one-way-that-helps-you-get-to-sleep {
+  align-self: stretch;
+  color: #282828;
+  font-family: "Oswald", Helvetica;
+  font-size: 90px;
+  font-weight: 400;
+  letter-spacing: 0;
+  line-height: 90px;
+  margin-top: -1px;
+  position: relative;
+}
+
+.prompt-page-text-wrapper {
+  font-weight: 500;
+}
+
+.prompt-page-span {
+  font-size: 99px;
+  font-weight: 500;
+  line-height: 99px;
+}
+
+.prompt-page-text-wrapper-2 {
+  font-size: 45px;
+  line-height: 58.5px;
+}
+
+.prompt-page-b-2 {
+  align-items: flex-start;
+  align-self: stretch;
+  display: flex;
+  flex-direction: column;
+  padding: 40px 0px 30px;
+  position: relative;
+}
+
+.prompt-page-p {
+  align-self: stretch;
+  color: #282828;
+  font-family: "Oswald", Helvetica;
+  font-size: 45px;
+  font-weight: 400;
+  letter-spacing: 0;
+  line-height: 58.5px;
+  margin-top: -1px;
+  position: relative;
+}
+
+.prompt-page-here-s-what-people-think-tap-on-them-to-see-the-details {
+  align-self: stretch;
+  color: #282828;
+  font-family: "Oswald", Helvetica;
+  font-size: 45px;
+  font-weight: 400;
+  letter-spacing: 0;
+  line-height: 45px;
+  margin-top: -1px;
+  position: relative;
+}
+
+.prompt-page-text-wrapper-3 {
+  line-height: 58.5px;
+}
+
+.prompt-page-text-wrapper-4 {
+  font-size: 90px;
+  font-weight: 500;
+  line-height: 90px;
+}
+
+.prompt-page-don-t-eat-before-bed-just-finished-a-sandwich {
+  align-self: stretch;
+  color: #282828;
+  cursor: pointer;
+  font-family: "Oswald", Helvetica;
+  font-size: 45px;
+  font-weight: 400;
+  letter-spacing: 0;
+  line-height: 58.5px;
+  margin-top: -1px;
+  position: relative;
+}
+
+.prompt-page-face {
+  height: 50.55px;
+  min-width: 189.68px;
+  position: relative;
+}
+
+.prompt-page-i-usually-listen-to-podcasts-recommend-this-it-is-one-of-the-best-recording-ever-it-tells-you-how-your-muscle-operate-under-extreme-temperature-where-the-tissues-make-a-wormhole-to-the-other-side-of-the-universe-and-listen-to-spotify-while-it-s-ready-for-a-role-play-game {
+  align-self: stretch;
+  color: #282828;
+  font-family: "Oswald", Helvetica;
+  font-size: 30px;
+  font-weight: 300;
+  letter-spacing: 0;
+  line-height: 39px;
+  margin-top: -1px;
+  position: relative;
+}
+
+.prompt-page-group {
+  border: 2px solid;
+  border-color: #282828;
+  height: 198px;
+  min-width: 320px;
+  position: relative;
+}
+
+.prompt-page-img {
+  height: 45px;
+  left: 135px;
+  position: absolute;
+  top: 74px;
+  width: 45px;
+}
+
+.prompt-page-b-cat {
+  align-items: center;
+  align-self: stretch;
+  display: flex;
+  flex-direction: column;
+  padding: 40px 0px 170px;
+  position: relative;
+}
