--- a/my-app/src/pages/Prompt/Prompt.css
+++ b/my-app/src/pages/Prompt/Prompt.css
@@ -1,47 +1,3 @@
-/* .container {
-  max-width: 1000px;
-  margin: auto;
-  padding: 0 20px;
-  box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-h1 {
-  text-align: center;
-  font-size: 48px;
-  margin: 0;
-  padding: 30px 0;
-}
-
-h2 {
-  text-align: center;
-  font-size: 36px;
-  margin-top: 50px;
-}
-
-.calendar button {
-  background-color: #508f56;
-  color: #fff;
-  padding: 10px 20px;
-  font-size: 18px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: all 0.3s ease-in-out;
-}
-
-button:hover {
-  background-color: #20371b;
-  color: #508f56;
-  border: 1px solid #508f56;
-}
-
-p {
-  text-align: center;
-  font-size: 24px;
-  margin-top: 30px;
-} */
-
 .prompt-page-prompt-page {
   align-items: center;
   border: 1px none;
@@ -97,13 +53,27 @@ p {
   align-self: stretch;
   color: #282828;
   font-family: "Oswald", Helvetica;
-  font-size: 45px;
+  font-size: 55px;
+  font-weight: 500;
+  letter-spacing: 0;
+  line-height: 58.5px;
+  margin-top: -1px;
+  position: relative;
+  text-align: left;
+  white-space: nowrap;
+}
+
+.prompt-page-apr-two {
+  align-self: stretch;
+  color: #282828;
+  font-family: "Oswald", Helvetica;
+  font-size: 35px;
   font-weight: 400;
   letter-spacing: 0;
   line-height: 58.5px;
   margin-top: -1px;
   position: relative;
-  text-align: center;
+  text-align: left;
   white-space: nowrap;
 }
 
