--- a/my-app/src/pages/Prompt/Prompt.css
+++ b/my-app/src/pages/Prompt/Prompt.css
@@ -55,12 +55,13 @@
   font-family: "Oswald", Helvetica;
   font-size: 55px;
   font-weight: 500;
+  text-decoration: underline;
   letter-spacing: 0;
   line-height: 58.5px;
-  margin-top: -1px;
   position: relative;
   text-align: left;
   white-space: nowrap;
+  margin-bottom: 1rem;
 }
 
 .prompt-page-apr-two {
@@ -75,6 +76,7 @@
   position: relative;
   text-align: left;
   white-space: nowrap;
+  margin-bottom: 1.3rem;
 }
 
 .prompt-page-div {
@@ -226,4 +228,8 @@
 
 .divider-small {
   min-width: 390px;
+}
+
+.negative-margin {
+  margin-left: -1.5rem;
 }
