--- a/my-app/src/components/UserPost/UserPost.css
+++ b/my-app/src/components/UserPost/UserPost.css
@@ -1,9 +1,9 @@
 .post-container {
   width: 365px;
   padding: 15px 25px;
-  background-color: green;
-  background: #ffffff;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.25);
+  /* background-color: green; */
+  /* background: #ffffff; */
+  /* box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.25); */
   border-radius: 8px;
   margin: 1rem 0;
 }
@@ -38,13 +38,13 @@
 }
 
 .date_posted {
+  font-family: "Oswald";
   font-style: normal;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 20px;
   line-height: 19px;
   letter-spacing: 0.2px;
   color: #4f4f4f;
-  margin-left: 0.5rem;
 }
 
 .middle-section {
@@ -56,8 +56,18 @@
 }
 
 .post_text {
-  width: 90%;
-  padding-right: 5px;
+  font-family: "Oswald";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 32px;
+  line-height: 130%;
+  color: #282828;
+}
+
+.trash-icon {
+  color: #282828;
+  font-size: 2.5rem;
+  margin-top: 2rem;
 }
 
 .button-container {
