--- a/my-app/src/components/calendar/calendar.css
+++ b/my-app/src/components/calendar/calendar.css
@@ -1,6 +1,6 @@
 .datepicker-container .react-datepicker__day-name,
 .datepicker-container .react-datepicker__day {
-  height: 30px;
+  height: 60px;
   line-height: 30px;
   margin: 1px;
   width: 30px;
@@ -22,12 +22,13 @@
 }
 
 .calendar-button {
-  background-color: #508f56;
-  color: #fff;
-  padding: 10px 20px;
-  font-size: 18px;
+  background: none;
+  color: #282828;
+  font-family: "Oswald", Helvetica;
+  font-size: 30px;
+  font-weight: 500;
+  margin-top: 0.4rem;
   border: none;
-  border-radius: 4px;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
 }
@@ -36,4 +37,17 @@ button:hover {
   background-color: none;
   color: none;
   border: none;
+}
+
+.react-datepicker-wrapper {
+  border-color: green;
+}
+
+.datePicker {
+  border: 3px solid #282828;
+  display: flex;
+  color: #282828;
+  font-family: "Oswald", Helvetica;
+  font-size: 30px;
+  font-weight: 500;
 }
