--- a/my-app/src/pages/Prompt/Prompt.css
+++ b/my-app/src/pages/Prompt/Prompt.css
@@ -222,7 +222,7 @@
   min-width: "197.98px";
   position: "relative";
   transition: "all 0.2s ease";
-  width: "unset";
+  width: 200px;
   margin-top: 4rem;
 }
 
