--- a/my-app/src/pages/Prompt/Prompt.css
+++ b/my-app/src/pages/Prompt/Prompt.css
@@ -233,3 +233,23 @@
 .negative-margin {
   margin-left: -1.5rem;
 }
+
+.log-in-button {
+  color: #000000;
+  font-family: "Oswald", Helvetica;
+  font-size: 23px;
+  font-weight: 400;
+  transform: translate(7.4rem, 2.95rem);
+  /* transform: translateX(7.4rem); */
+  /* left: 290px; */
+  /* letter-spacing: 0; */
+  /* line-height: normal; */
+  /* position: absolute; */
+  /* text-decoration: underline; */
+  /* top: 66px; */
+  /* white-space: nowrap; */
+}
+
+a {
+  width: 100%;
+}
