--- a/my-app/src/pages/PostDetail/PostDetail.css
+++ b/my-app/src/pages/PostDetail/PostDetail.css
@@ -46,7 +46,7 @@
   align-self: stretch;
   display: flex;
   flex-direction: column;
-  padding: 140px 0px 0px;
+  padding: 30px 0px 0px;
   position: relative;
 }
 
@@ -242,4 +242,15 @@
   font-size: 30px;
   color: #282828;
   margin: 0.5rem 0;
+}
+
+.post-date-posted {
+  font-family: "Oswald";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 19px;
+  letter-spacing: 0.2px;
+  color: #4f4f4f;
+  margin-top: 0.5rem;
 }
