--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -41,7 +41,7 @@ li {
 }
 
 nav {
-  background-color: #fdfdfd;
+  background-color: #ece8d1;
   display: flex;
   justify-content: space-between;
   position: fixed;
