--- a/my-app/src/pages/PostDetail/PostDetail.css
+++ b/my-app/src/pages/PostDetail/PostDetail.css
@@ -63,7 +63,7 @@
   /* position: absolute; */
   /* left: 0; */
   white-space: nowrap;
-  transform: translateX(-8.4rem);
+  /* transform: translateX(-8.4rem); */
 }
 
 .post-page-b {
