--- a/my-app/src/pages/UserPosts/UserPosts.css
+++ b/my-app/src/pages/UserPosts/UserPosts.css
@@ -17,6 +17,22 @@ your-post-your-post {
   position: relative;
 }
 
+.top-top-section {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+}
+
+.top-top-section p {
+  color: #686868;
+  cursor: pointer;
+  font-family: "Oswald", Helvetica;
+  font-size: 16px;
+  font-weight: 300;
+  letter-spacing: 0;
+  line-height: normal;
+}
+
 .your-post-logo {
   cursor: pointer;
   height: 24px;
