--- a/my-app/src/pages/Register/Register.css
+++ b/my-app/src/pages/Register/Register.css
@@ -57,6 +57,7 @@
   flex-direction: column;
   height: 90px;
   position: relative;
+  margin-top: 5rem;
 }
 
 .signup-text-wrapper {
@@ -101,10 +102,10 @@
   align-self: stretch;
   color: #686868;
   font-family: "Oswald", Helvetica;
-  font-size: 45px;
+  font-size: 35px;
   font-weight: 400;
   letter-spacing: 0;
-  line-height: 58.5px;
+  /* line-height: 58.5px; */
   position: relative;
   white-space: nowrap;
   border: none;
@@ -127,6 +128,16 @@
   border: none;
   outline: none;
   background: none;
+  margin-top: -3rem;
+}
+
+.signup-text-wrapper-4 {
+  color: #282828;
+  cursor: pointer;
+  font-family: "Oswald", Helvetica;
+  font-size: 20px;
+  font-weight: 500;
+  letter-spacing: 0;
 }
 
 button:hover {
