--- a/my-app/src/components/calendar/calendar.css
+++ b/my-app/src/components/calendar/calendar.css
@@ -21,13 +21,17 @@
   width: 28px;
 }
 
+.calendar-input {
+  padding-left: 5px;
+}
+
 .calendar-button {
   background: none;
   color: #282828;
   font-family: "Oswald", Helvetica;
   font-size: 30px;
   font-weight: 500;
-  margin-top: 0.4rem;
+  margin-top: 0.3rem;
   border: none;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
