--- a/my-app/src/pages/InternalPrompt/InternalPrompt.css
+++ b/my-app/src/pages/InternalPrompt/InternalPrompt.css
@@ -1,3 +1,157 @@
 .admin-prompt {
   background: #d1ebec;
 }
+.selection-selection-wrapper {
+  background-color: transparent;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+}
+
+.selection-selection {
+  height: 1600px;
+  width: 803px;
+}
+
+.selection-content {
+  align-items: center;
+  background-color: #d1eaec;
+  display: flex;
+  flex-direction: column;
+  height: 1229px;
+  padding: 20px 24px;
+  position: relative;
+  width: 390px;
+}
+
+.selection-logo {
+  height: 24px;
+  left: 32px;
+  position: absolute;
+  top: 69px;
+  width: 31px;
+}
+
+.selection-logout {
+  color: #282828;
+  font-family: "Oswald", Helvetica;
+  font-size: 23px;
+  font-weight: 400;
+  left: 304px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-decoration: underline;
+  top: 69px;
+  white-space: nowrap;
+}
+
+.selection-b {
+  align-items: center;
+  align-self: stretch;
+  display: flex;
+  flex-direction: column;
+  padding: 60px 0px 30px;
+  position: relative;
+}
+
+.selection-text-wrapper {
+  align-self: stretch;
+  color: #282828;
+  font-family: "Oswald", Helvetica;
+  font-size: 81px;
+  font-weight: 500;
+  letter-spacing: 0;
+  line-height: 81px;
+  margin-top: -1px;
+  position: relative;
+}
+
+.selection-b1-5 {
+  align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  margin-left: -4px;
+  margin-right: -4px;
+  padding: 30px 0px 0px;
+  position: relative;
+  width: fit-content;
+}
+
+.back-button {
+  align-self: stretch;
+  color: #282828;
+  cursor: pointer;
+  font-family: "Oswald", Helvetica;
+  font-size: 90px;
+  font-weight: 500;
+  letter-spacing: 0;
+  line-height: 90px;
+  margin-top: -1px;
+  /* position: absolute; */
+  /* left: 0; */
+  white-space: nowrap;
+  /* transform: translateX(-8.4rem); */
+}
+
+.datePicker {
+  border: 3px solid #282828;
+  display: flex;
+  color: #282828;
+  font-family: "Oswald", Helvetica;
+  font-size: 30px;
+  font-weight: 500;
+}
+
+.react-datepicker-wrapper {
+  /* width: 270px; */
+}
+
+.selection-apr {
+  align-self: stretch;
+  color: #282828;
+  font-family: "Oswald", Helvetica;
+  font-size: 45px;
+  font-weight: 400;
+  letter-spacing: 0;
+  line-height: 58.5px;
+  margin-top: -1px;
+  position: relative;
+  white-space: nowrap;
+}
+
+.selection-sleep-how-much-sleep-did-you-get-last-night-what-is-one-way-that-helps-you-get-to-sleep {
+  color: #282828;
+  font-family: "Oswald", Helvetica;
+  font-size: 75px;
+  font-weight: 400;
+  height: 552px;
+  letter-spacing: 0;
+  line-height: 75px;
+  position: relative;
+  width: 350px;
+}
+
+.selection-span {
+  font-weight: 500;
+}
+
+.selection-text-wrapper-2 {
+  font-size: 45px;
+  line-height: 58.5px;
+}
+
+.selection-div {
+  color: #282828;
+  font-family: "Oswald", Helvetica;
+  font-size: 90px;
+  font-weight: 500;
+  letter-spacing: 0;
+  line-height: 90px;
+  position: relative;
+  text-align: right;
+  white-space: nowrap;
+  width: 350px;
+}
