--- a/my-app/src/components/calendar/calendar.css
+++ b/my-app/src/components/calendar/calendar.css
@@ -1,57 +1,15 @@
-.datepicker-container .react-datepicker__day-name,
-.datepicker-container .react-datepicker__day {
-  height: 60px;
-  line-height: 30px;
-  margin: 1px;
-  width: 30px;
-}
-
-.datepicker-container
-  .react-datepicker__header
-  .react-datepicker__current-month,
-.datepicker-container
-  .react-datepicker__header
-  .react-datepicker-year-dropdown-container {
-  font-size: 1rem;
-  margin: 0 5px;
-}
-
-.datepicker-container .react-datepicker__navigation {
-  height: 28px;
-  width: 28px;
-}
-
 .calendar-input {
-  padding-left: 5px;
+  padding-left: 2%;
+  border: 3px solid #282828;
+  width: 100%;
 }
 
 .calendar-button {
-  background: none;
   color: #282828;
   font-family: "Oswald", Helvetica;
   font-size: 30px;
   font-weight: 500;
   margin-top: 0.3rem;
-  border: none;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
-}
-
-button:hover {
-  background-color: none;
-  color: none;
-  border: none;
-}
-
-.react-datepicker-wrapper {
-  border-color: green;
-}
-
-.datePicker {
-  border: 3px solid #282828;
-  display: flex;
-  color: #282828;
-  font-family: "Oswald", Helvetica;
-  font-size: 30px;
-  font-weight: 500;
 }
