--- a/my-app/src/firebase/upload.css
+++ b/my-app/src/firebase/upload.css
@@ -1,10 +1,11 @@
 .upload-attachment {
   /* border: 2px solid red; */
-  margin: 3rem 0;
+  margin: 2rem 0;
 }
 
 .upload-attachment input {
   margin: 1rem 0;
+  border: 2px solid red;
 }
 
 .upload-text {
