--- a/my-app/src/pages/InternalReport/InternalReport.css
+++ b/my-app/src/pages/InternalReport/InternalReport.css
@@ -1,10 +1,145 @@
-.admin-report-title {
+.admin-page-admin-page {
+  align-items: center;
+  border: 1px none;
+  display: flex;
+  flex-direction: column;
+  height: 1672px;
+  min-width: 390px;
+  position: relative;
+}
+
+.admin-page-content {
+  align-items: center;
+  align-self: stretch;
+  background-color: #d1eaec;
+  display: flex;
+  flex-direction: column;
+  height: 1672px;
+  padding: 20px 24px;
+  position: relative;
+}
+
+.admin-page-logo {
+  height: 24px;
+  left: 32px;
+  position: absolute;
+  top: 69px;
+  width: 31px;
+}
+
+.admin-page-logout {
+  color: #282828;
+  font-family: "Oswald", Helvetica;
+  font-size: 23px;
+  font-weight: 400;
+  left: 304px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-decoration: underline;
+  top: 69px;
+  white-space: nowrap;
+}
+
+.admin-page-b {
+  align-items: center;
+  align-self: stretch;
+  display: flex;
+  flex-direction: column;
+  padding: 140px 0px 30px;
+  position: relative;
+}
+
+.admin-page-text-wrapper {
   align-self: stretch;
   color: #282828;
   font-family: "Oswald", Helvetica;
-  font-size: 90px;
+  font-size: 81px;
+  font-weight: 500;
+  letter-spacing: 0;
+  line-height: 81px;
+  margin-top: -1px;
+  position: relative;
+}
+
+.admin-page-b-1 {
+  align-items: flex-start;
+  align-self: stretch;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  padding: 40px 0px 30px;
+  position: relative;
+}
+
+.admin-page-report-text-div {
+  align-self: stretch;
+  color: #a62f2f;
+  font-family: "Oswald", Helvetica;
+  font-size: 32px;
   font-weight: 400;
   letter-spacing: 0;
-  line-height: 90px;
+  line-height: 41.6px;
+  margin-top: -1px;
   position: relative;
+  white-space: nowrap;
+}
+
+.admin-page-don-t-eat-before-bed-just-finished-a-sandwich {
+  color: #282828;
+  font-family: "Oswald", Helvetica;
+  font-size: 45px;
+  font-weight: 400;
+  letter-spacing: 0;
+  line-height: 58.5px;
+  margin-right: -7px;
+  position: relative;
+  width: 349px;
+}
+
+.admin-page-b-7 {
+  align-items: center;
+  align-self: stretch;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  padding: 40px 0px 30px;
+  position: relative;
+}
+
+.admin-page-take-a-look-at-this-video {
+  align-self: stretch;
+  color: #282828;
+  font-family: "Oswald", Helvetica;
+  font-size: 45px;
+  font-weight: 400;
+  letter-spacing: 0;
+  line-height: 58.5px;
+  position: relative;
+}
+
+.admin-page-group {
+  border: 2px solid;
+  border-color: #282828;
+  height: 198px;
+  min-width: 320px;
+  position: relative;
+}
+
+.admin-page-img {
+  height: 45px;
+  left: 135px;
+  position: absolute;
+  top: 74px;
+  width: 45px;
+}
+
+.post_text {
+  font-family: "Oswald";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 50px;
+  /* line-height: %; */
+  color: #282828;
+  margin-bottom: 0.5rem;
 }
