--- a/my-app/src/pages/Prompt/Prompt.css
+++ b/my-app/src/pages/Prompt/Prompt.css
@@ -32,7 +32,6 @@
   font-size: 23px;
   font-weight: 400;
   left: 325px;
-  letter-spacing: 0;
   line-height: normal;
   position: absolute;
   text-decoration: underline;
@@ -41,11 +40,10 @@
 }
 
 .prompt-page-b {
-  align-items: center;
   align-self: stretch;
   display: flex;
   flex-direction: column;
-  padding: 50px 0px 0px;
+  padding: 50px 0px 0px 0px;
   position: relative;
 }
 
@@ -56,7 +54,6 @@
   font-size: 55px;
   font-weight: 500;
   text-decoration: underline;
-  letter-spacing: 0;
   line-height: 58.5px;
   position: relative;
   text-align: left;
@@ -70,9 +67,7 @@
   font-family: "Oswald", Helvetica;
   font-size: 35px;
   font-weight: 400;
-  letter-spacing: 0;
   line-height: 58.5px;
-  margin-top: -1px;
   position: relative;
   text-align: left;
   white-space: nowrap;
@@ -94,15 +89,13 @@
   font-family: "Oswald", Helvetica;
   font-size: 90px;
   font-weight: 400;
-  letter-spacing: 0;
   line-height: 90px;
-  margin-top: -1px;
   position: relative;
 }
 
 .prompt-page-text-wrapper {
   font-weight: 500;
-  text-decoration: underline;
+  /* text-decoration: underline; */
 }
 
 .small-text {
@@ -137,9 +130,7 @@
   font-family: "Oswald", Helvetica;
   font-size: 45px;
   font-weight: 400;
-  letter-spacing: 0;
   line-height: 58.5px;
-  margin-top: -1px;
   position: relative;
 }
 
@@ -149,9 +140,7 @@
   font-family: "Oswald", Helvetica;
   font-size: 45px;
   font-weight: 400;
-  letter-spacing: 0;
   line-height: 45px;
-  margin-top: -1px;
   position: relative;
 }
 
@@ -172,9 +161,7 @@
   font-family: "Oswald", Helvetica;
   font-size: 45px;
   font-weight: 400;
-  letter-spacing: 0;
   line-height: 58.5px;
-  margin-top: -1px;
   position: relative;
 }
 
@@ -190,9 +177,7 @@
   font-family: "Oswald", Helvetica;
   font-size: 30px;
   font-weight: 300;
-  letter-spacing: 0;
   line-height: 39px;
-  margin-top: -1px;
   position: relative;
 }
 
@@ -242,7 +227,7 @@
 }
 
 .log-in-button {
-  color: #000000;
+  color: #282828;
   font-family: "Oswald", Helvetica;
   font-size: 23px;
   font-weight: 400;
