--- a/my-app/src/pages/PostDetail/PostDetail.css
+++ b/my-app/src/pages/PostDetail/PostDetail.css
@@ -195,9 +195,12 @@
   height: auto;
 }
 
+/* LEAVE THIS TO JULIUS */
 .post-image-attachment {
   margin: 1rem 0 0 0;
-  height: auto;
+  /* height: 100%;
+  overflow: hidden;
+  position: relative; */
 }
 
 .post-page-icon-heart {
@@ -213,15 +216,6 @@
   left: 250px;
   position: absolute;
   top: 4px;
-  width: 70px;
-}
-
-.post-page-material-symbols-report-outline {
-  cursor: pointer;
-  height: 70px;
-  left: 130px;
-  position: absolute;
-  top: 3px;
   width: 70px;
 }
 
@@ -241,6 +235,7 @@
   font-weight: 400;
   letter-spacing: 0;
   line-height: 58.5px;
+  margin-top: -1px;
   position: relative;
 }
 
@@ -262,7 +257,6 @@
 }
 
 .editing-input {
-  /* border: 2px solid black; */
   outline: none;
   color: #686868;
   font-family: "Oswald", Helvetica;
@@ -275,7 +269,6 @@
 }
 
 .commenting-input {
-  /* border: 2px solid black; */
   outline: none;
   color: #686868;
   font-family: "Oswald", Helvetica;
