--- a/my-app/src/components/UserPost/UserPost.css
+++ b/my-app/src/components/UserPost/UserPost.css
@@ -1,9 +1,6 @@
 .post-container {
   width: 365px;
   padding: 15px 25px;
-  /* background-color: green; */
-  /* background: #ffffff; */
-  /* box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.25); */
   border-radius: 8px;
   margin: 1rem 0;
 }
@@ -29,6 +26,17 @@
   height: auto;
 }
 
+.post-image-attachment-user {
+  margin: 1rem 0 0 0;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+  overflow: hidden;
+  width: 350px;
+  height: auto;
+  overflow: hidden;
+}
+
 .report_button {
   display: flex;
 }
@@ -42,7 +50,6 @@
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
-  line-height: 19px;
   letter-spacing: 0.2px;
   color: #4f4f4f;
 }
@@ -63,6 +70,7 @@
   font-size: 42px;
   color: #282828;
   margin-bottom: 0.5rem;
+  max-width: 300px;
 }
 
 .trash-icon {
@@ -72,7 +80,7 @@
 }
 
 .button-container {
-  /* width: 50%; */
+  width: 50%;
   display: flex;
   align-items: center;
 }
