--- a/my-app/src/components/UserPost/UserPost.css
+++ b/my-app/src/components/UserPost/UserPost.css
@@ -110,12 +110,11 @@
 .iframe-wrap {
   position: relative;
   overflow: hidden;
+  width: 100%;
 }
 
 iframe {
-  max-width: 95%;
-  height: auto;
-  aspect-ratio: auto;
+  height: 100%;
 }
 
 .pencil-icon {
