--- a/my-app/src/pages/HomeVTwo/HomeVTwo.css
+++ b/my-app/src/pages/HomeVTwo/HomeVTwo.css
@@ -3,7 +3,7 @@
   background-color: #ece8d1;
   display: flex;
   flex-direction: column;
-  height: 2600px;
+  height: 2250px;
   padding: 20px;
   position: relative;
   width: 390px;
@@ -71,4 +71,10 @@
   position: absolute;
   top: 240px;
   width: 198px;
+}
+
+.about-us {
+  color: #282828;
+  line-height: 1.3;
+  margin-top: 12rem;
 }
