--- a/my-app/src/pages/HomeVTwo/HomeVTwo.css
+++ b/my-app/src/pages/HomeVTwo/HomeVTwo.css
@@ -3,7 +3,7 @@
   background-color: #ece8d1;
   display: flex;
   flex-direction: column;
-  height: 2250px;
+  height: 2200px;
   padding: 20px;
   position: relative;
   width: 390px;
@@ -74,7 +74,12 @@
 }
 
 .about-us {
-  color: #282828;
-  line-height: 1.3;
   margin-top: 12rem;
+}
+
+.about-us-line {
+  font-weight: 450;
+  font-size: 25px;
+  line-height: 130%;
+  color: #282828;
 }
