--- a/my-app/src/components/AccountInfo/AccountInfo.css
+++ b/my-app/src/components/AccountInfo/AccountInfo.css
@@ -3,3 +3,15 @@
   color: #282828;
   margin-top: 4rem;
 }
+
+.bottom-message {
+  font-size: 23px;
+  font-weight: 400;
+  margin-top: 1rem;
+}
+
+.password-input {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  font-size: 30px;
+}
