--- a/my-app/src/components/UserPost/UserPost.css
+++ b/my-app/src/components/UserPost/UserPost.css
@@ -26,16 +26,14 @@
   height: auto;
 }
 
-/* .post-image-attachment-user {
-  margin: 1rem 0 0 0;
+.post-image-attachment-user-hello {
+  max-width: 350px;
+  width: 100%;
+  max-height: 350px;
   height: 100%;
-  overflow: hidden;
-  position: relative;
-  overflow: hidden;
-  width: 350px;
-  height: auto;
-  overflow: hidden;
-} */
+  object-fit: cover;
+  border-radius: 10px;
+}
 
 .report_button {
   display: flex;
