--- a/my-app/src/components/AccountInfo/AccountInfo.css
+++ b/my-app/src/components/AccountInfo/AccountInfo.css
@@ -1,7 +1,7 @@
 .profile-page-text-wrapper-3,
 .profile-page-text-wrapper-3 {
   color: #282828;
-  margin-top: 4rem;
+  margin-top: 60px;
 }
 
 .bottom-message {
