--- a/my-app/src/pages/UserProfile/UserProfile.css
+++ b/my-app/src/pages/UserProfile/UserProfile.css
@@ -44,7 +44,7 @@
   align-self: stretch;
   display: flex;
   flex-direction: column;
-  padding: 70px 0px 30px;
+  padding: 70px 0px 10px 0px;
   position: relative;
 }
 
@@ -96,8 +96,8 @@ button {
   align-items: flex-start;
   display: flex;
   flex-direction: column;
-  gap: 36px;
-  padding: 40px 0px 0px;
+  gap: 20px;
+  padding: 30px 0;
   position: relative;
   width: fit-content;
 }
@@ -139,6 +139,7 @@ button {
 .profile-page-text-wrapper-6 {
   color: #282828;
   font-size: 90px;
+  line-height: 60px;
   font-weight: 500;
   position: relative;
   text-align: right;
@@ -183,9 +184,4 @@ button {
   font-size: 23px;
   font-weight: 400;
   position: relative;
-}
-
-.profile-page-text-wrapper-10 {
-  font-size: 23px;
-  font-weight: 400;
 }
