--- a/my-app/src/pages/About/About.css
+++ b/my-app/src/pages/About/About.css
@@ -57,19 +57,23 @@
   position: relative;
 }
 
-.about-selection-about-us {
+/* .about-selection-about-us {
   align-self: stretch;
   color: transparent;
   font-size: 90px;
   font-weight: 400;
   line-height: 80px;
   position: relative;
-}
+} */
 
-.about-selection-text-wrapper {
+.h1-title {
   color: #282828;
   font-weight: 500;
-  font-size: 60px;
+  font-size: 70px;
+}
+
+.h2-title {
+  margin-top: 30px;
 }
 
 .about-selection-span {
